--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>돈DoThat</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
@@ -12,6 +12,26 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- 아이콘 및 manifest 링크 -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/favicon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/favicon-512x512.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- 색상 정의 (이건 바꿀것) -->
+    <meta name="theme-color" content="#FF5555" />
+    <meta name="msapplication-TileColor" content="#FF5555" />
   </head>
   <body>
     <div id="app"></div>
